<resources>
    <item name="tag_key_data" type="id" />
    <item name="tag_key_position" type="id" />
    <item name="sticker_key_data" type="id" />
    <item name="sticker_key_position" type="id" />
    <string name="app_name">D6社区</string>
    <string name="step1">STEP\n1</string>
    <string name="step2">STEP\n2</string>
    <string name="step3">STEP\n3</string>
    <string name="step4">STEP\n4</string>
    <string name="step5">STEP\n5</string>
    <string name="step6">STEP\n6</string>
    <string name="string1">哈哈哈\n哈哈哈哈</string>
    <string name="string_woman_wechat_tip">女生专属客服\n点击复制微信号:000000</string>
    <string name="string_man_wechat_tip">男生专属客服\n点击复制微信号:000000</string>
    <string name="title_activity_speed_date">SpeedDateActivity</string>
    <string name="first_step_info">第一步: 完善个人信息\n必须完成超过60%,才能认证</string>
    <string name="second_step_info">第二步:填写联系方式\n绝对保密，取得你同意后对方才能看到</string>
    <string name="third_step_info">第二步: 人工认证\n客服人工认证,保证用户资料真实有效</string>
    <string name="auth_tips">认证是为了保证用户的信息真实性，提供优质服务，目前仅提供微信人工认证服务（女生免费）</string>
    <string name="loginout_tips">你的微信授权信息已过期，请重新授权</string>
    <string name="wx_fast_login">微信快捷登录</string>
    <string name="user_no_auther">认证后更容易获得青睐·点击认证</string>
    <string name="mine_edit_info">编辑资料</string>
    <string name="hobbit_string">每个兴趣爱好最长5个字，点击“添加“可添加多个，最多3个兴趣爱好</string>
    <string name="date_wenan">想要TA的联系方式,点击联系客服,将此页面分享给客服哦</string>
    <string name="string_mypoints">我的积分</string>
    <string name="string_wallet">钱包</string>
    <string name="str_points_pay_success">积分充值成功</string>
    <string name="str_points_pay_fail">充值失败，请重新支付</string>
    <string name="likeme">喜欢我的</string>
    <string name="Ilike">我喜欢的</string>
    <string name="open_date_string">发起约会</string>
    <string name="send_date_string">你发起的约会将通知对方,对方同意之后就可以开启甜蜜之旅,点击"我的约会",可查看约会状态</string>
    <string name="string_pointdesc">本次约会预付%1$s积分,查看我的积分</string>
    <string name="string_pointlow">你当前积分为%1$s积分,申请赴约需要消耗%2$s积分。点击"充值"可获得更多积分,为了不错过心仪的TA。</string>
    <string name="string_balance">积分不足,你的剩余积分%1$s分</string>
    <string name="string_balance_loveheart">爱心不足,你的剩余爱心%1$s</string>
    <string name="string_senddatefail">申请失败</string>
    <string name="senddatepointlow">申请失败,积分余额不足</string>
    <string name="vistorpointlow">查看访客失败,积分余额不足</string>
    <string name="string_samecity">同城</string>
    <string name="string_age">年龄</string>
    <string name="string_area">地区</string>
    <string name="string_siliao">私聊</string>
    <string name="string_like">喜欢</string>
    <string name="string_liked">已喜欢</string>
    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="string_sexchoose_title">性别选择</string>
    <string name="string_areachoose_title">地区选择</string>
    <string name="string_xinzuochoose_title">星座选择</string>
    <string name="string_nolocation">定位失败,点击重试</string>
    <string name="string_red_flower">小红花</string>
    <string name="string_sendredflower_title">送TA小红花,回复率更高哦</string>
    <string name="string_sendflower_success">对方已经收到你送的小红花了\n么么哒</string>
    <string name="string_cash_money">可提现金额：¥%1$s</string>
    <string name="string_openchat_pay_points">你已发出3条信息,已达上限,支付积分畅聊</string>
    <string name="string_openchat_pay_nopoints">可免费发3条消息,支付积分即可畅聊</string>
    <string name="string_openchat_sendcount_msg">剩余发送消息%1$s</string>
    <string name="string_auth">已认证</string>
    <string name="string_openchat">申请私聊</string>
    <string name="string_openchangchat">开启畅聊</string>
    <string name="string_paypoints">支付积分</string>
    <string name="string_apply_openchat">申请</string>
    <string name="string_other_apply_openchat">对方申请和你私聊</string>
    <string name="string_pay_points_openchat">支付积分可开启私聊</string>
    <string name="string_other_agreee_openchat">对方同意后可开启私聊</string>
    <string name="string_pay_points_openchangchat">支付积分后即可无限畅聊</string>
    <string name="string_otherapply_agreee_openchat">%1$s申请和你私聊</string>
    <string name="string_apply_agree_openchat">申请和对方私聊</string>
    <string name="string_apply_agree_openchat_warm">为了避免恶意骚扰，请先向对方发起私聊申请</string>
    <string name="string_already_applay">已申请</string>
    <string name="string_privatechat_set">私聊设置</string>
    <string name="string_linechat">直接私聊</string>
    <string name="string_agree_openchat">同意后私聊</string>
    <string name="string_chat_setting">私聊设置</string>
    <string name="string_downloadapp">后台已开始下载，下载完成后即可安装</string>
    <string name="string_points_desc">钱包说明</string>
    <string name="string_ok">确认</string>
    <string name="string_cancel">取消</string>
    <string name="string_blacklist_toast">已加入黑名单,可前往“设置-黑名单”中查看</string>
    <string name="string_addblacklist">操作失败，您已经被对方拉到黑名单</string>
    <string name="string_addblacklist_toast">您已被对方拉到黑名单</string>
    <string name="string_contact_customer_service">联系客服</string>
    <string name="string_nosys">未开启系统通知</string>
    <string name="string_nosys_tips">开启系统通知，不再错过来自异性的问候</string>
    <string name="string_choose">多选</string>
    <string name="string_joinblack">加入黑名单</string>
    <string name="string_report_us">举报</string>
    <string name="string_comment_tips">说点好听的</string>
    <string name="string_replaycomment">回复%1$s:</string>
    <string name="string_sharefriends_cancel">取&#12288;消</string>
    <string name="string_delete">删除</string>
    <string name="string_aboutd6">Copyright@2004-2019\n北京礼遇科技有限公司所有</string>
    <string name="string_unknowmessage">【当前版本暂不支持查看此消息,请升级新版App后查看】</string>
    <string name="layout_dialog_loading">正在加载...</string>
    <!--男性-->
    <string name="string_ordinary">普通</string>
    <string name="string_silver">白银</string>
    <string name="string_gold">黄金</string>
    <string name="string_diamonds">钻石</string>
    <string name="string_private">私人定制</string>
    <!--女性-->
    <string name="string_middle">中级</string>
    <string name="string_primary">初级</string>
    <string name="string_senior">高级</string>
    <string name="string_removeblacklist">移出黑名单</string>
    <string name="string_notificefriends">通知好友</string>
    <string name="string_contacts">最近联系人</string>
    <string name="string_searchfriends">搜索</string>
    <string name="string_info">一个好的自我介绍更受异性青睐~</string>
    <string name="string_vip_tq">开通会员享受更多特权</string>
    <string name="string_nosquare">还没有任何动态</string>
    <string name="string_ask_service">有相关问题可以联系客服</string>
    <string name="string_auth_explain">为了保障会员的服务，满足你个性化的需求，做针对性的匹配。D6会给每个会员提供一对一专属微信客服</string>
    <string name="string_memeber_success">恭喜你成为会员</string>
    <string name="string_man_firstcomment">“作为钻石会员，享受着客服的贴心一对一服务，哦，对了，我探探陌陌全部卸载了”</string>
    <string name="string_man_secondcomment">“作为一个进了D6两年的会员看到了平台的发展，有很大的进步”</string>
    <string name="string_man_lastcomment">“每次申请匹配都有专门的客服小姐姐来找我进行询问和帮助，非常周到！就算匹配不成功，跟客服小姐姐聊天也不错”</string>
    <string name="string_women_firstcomment">“中级会员的我已经呆了一年多了 也算比较熟悉了 群的种类多 有些蛮热闹 也有线下聚会”</string>
    <string name="string_women_secondcomment">“特别好玩的一个app，里面可以看到动态还能发起约会，灰常棒~”</string>
    <string name="string_women_lastcomment">“我进Ｄ6以来、在D6认识了很多异性朋友、而且客服比别的平台负责多了”</string>
    <string name="string_unknow_unknow">匿名身份</string>
    <string name="string_unknow_open">真实身份</string>
    <string name="string_payinfo">本次申请私聊将预付%1$s积分，对方同意后即可无限畅聊\n对方同意，扣除%2$s积分\n对方拒绝，返还200积分\n超时未回复，返还%2$s积分</string>
    <string name="string_nm_tips">你正在以匿名身份和对方聊天</string>
    <string name="string_system_tips01">温馨提示：为了保持良好的社区氛围，请不要发送低俗、淫秽色情、辱骂他人的消息，如果被对方举报经核实后将予以禁言或封号处理</string>
    <string name="string_system_tips02">温馨提示：如果聊天中对方索要小红花、微信号或者借钱等行为时，请予以警惕。如果对方发送低俗、淫秽色情、辱骂他人的消息时，可点击右上角举报</string>
    <string name="string_system_tips03">如果对方要求你添加微信或手机号等其他联系方式，请谨慎添加以防诈骗，为了维护你的权益，可以联系客服确认安全后再添加</string>
    <string name="string_loading_tips">加载中...</string>
    <string name="string_d6_desc">D6定位交友约会社区，以高品质、高素质的会员为基础，全球拥有100000+的优质华人会员。平台将实行会员制，成为会员后即可享受私人定制服务</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_newcomments">有新的评论</string>
    <string name="string_applay_tips_center">%1$s申请与你私聊</string>
    <string name="string_appaying_openchat">私聊申请中...</string>
    <string name="string_applay_sendredflower">送爱心</string>
    <string name="string_give_redflower">等待对方同意，同意后即可无限畅聊</string>
    <string name="string_setfail">设置失败</string>
    <string name="string_conversation_type">申请私聊</string>
    <string name="string_applay_date_tips">可发送消息数已用完</string>
    <string name="string_fuyue_applay_date_tips">可发送消息数已用完</string>
    <string name="string_picsave_local">图片已保存到相册</string>
    <string name="str_invite_top_des2"><![CDATA[· 好友购买会员，即奖励会员费20%小红花给你，最高封顶2000朵小红花]]></string>
    <string name="checkin_content">会员福利，签到即可领取双倍积分</string>
    <string name="string_tasks">做任务</string>
    <string name="string_topicselection">选择话题</string>
    <string name="string_record_audio">按住开始录制</string>
    <string name="string_warm_voicetime">语音时长不能小于3s</string>
    <string name="video_error_string">视频选择错误</string>
    <string name="string_area_city">地区</string>
    <string name="string_service_desc">以高质量的服务为核心宗旨</string>
    <string name="string_lovepoints">爱心充值成功</string>
    <string name="string_redloveheart">喜欢</string>
    <string name="string_mycard">我的卡片</string>
    <string name="string_nowonline">当前状态</string>
    <string name="string_liked_give_other">把喜欢的机会留给别人吧</string>
    <string name="string_sex">性别</string>
    <string name="string_group">群聊</string>
    <string name="string_groupname_hint">输入群名称（2-8个字）</string>
    <string name="string_grouporfriends">群聊与好友</string>
    <string name="string_fire_longclick">阅后即焚\n长按图片即可查看</string>
    <string name="string_help_service">求助客服联系TA</string>

    <string name="scan_more">查看更多</string>
    <string name="release_scan_more">释放查看</string>
    <string name="string_useragreement">请你务必审慎阅读、充分理解《用户协议》和《隐私政策》各条款，包括但不限于:为了向你提供即时通讯、内容分享等服务,我们需要收集你的设备信息、操作日志等个人信息。 你可以在设置中查看、变更、删除个人信息并管理你的授权。 你可阅读《用户协议》《隐私政策》了解详细信息。如你同意，请点击同意开始接受我们的服务。</string>
    <string name="string_send_gift">把送礼的机会留给别人吧</string>
</resources>
