<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="@color/color_333333"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/string_chat_setting"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_10"
        android:textColor="@color/color_888888"
        android:text="设置后,完成以下操作对方才能和你私聊"/>
    <View
        android:background="@color/color_EFEFEF"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <TextView
        android:id="@+id/tv_line_chat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/color_F7AB00"
        android:text="@string/string_linechat"/>
    <TextView
        android:id="@+id/tv_agree_chat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/color_F7AB00"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/string_agree_openchat"/>
    <View
        android:background="@color/color_EFEFEF"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/color_888888"
        android:text="取消" />

</LinearLayout>