<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="转发给"
            android:textColor="@color/color_black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_share_tips"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_5"
            android:text="转发仅支持已经解锁聊天的联系人"
            android:textColor="@color/color_999999"
            android:textSize="11sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_chooseuser"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">
    </android.support.v7.widget.RecyclerView>
    <View style="@style/view_line_h" />
    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_15"
        android:paddingRight="@dimen/margin_15"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_report_user"
            android:drawableTop="@mipmap/jubao_button"
            android:gravity="center_horizontal"
            android:layout_marginRight="@dimen/margin_20"
            android:drawablePadding="@dimen/margin_5"
            android:textSize="12sp"
            android:textColor="@color/color_666666"
            android:text="@string/string_report_us"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_joinblack"
            android:drawableTop="@mipmap/heiming_button"
            android:drawablePadding="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_20"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:visibility="gone"
            android:textColor="@color/color_666666"
            android:id="@+id/tv_joinblack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_delete"
            android:drawableTop="@mipmap/deleted_button"
            android:drawablePadding="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:layout_marginRight="@dimen/margin_20"
            android:textSize="12sp"
            android:textColor="@color/color_666666"
            android:id="@+id/tv_deldate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微信分享"
            android:drawableTop="@mipmap/wechat_button"
            android:drawablePadding="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:textColor="@color/color_666666"
            android:id="@+id/tv_sharewx"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/string_sharefriends_cancel"
        android:background="@color/color_F5F5F5"
        android:textColor="@color/color_333333"
        android:textStyle="bold"
        android:textSize="15sp" />
</LinearLayout>