<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_8r"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="55dp"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_sendflower_success_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/height_40"
            android:text="小小的梦想"
            android:textColor="@color/color_888888"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_sendflower_nums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/color_black"
                android:text="----"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:textColor="@color/color_999999"
                android:textSize="15sp"
                android:text="X"/>
            <ImageView
                android:layout_width="@dimen/margin_35"
                android:layout_height="@dimen/margin_35"
                android:src="@mipmap/feed_flowers_seleted"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_15"
            android:gravity="center"
            android:text="@string/string_sendflower_success"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_sendflower_success_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/shape_20r_ff6"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_alignParentBottom="true"
                android:drawableLeft="@mipmap/icon_like_button"
                android:drawablePadding="@dimen/margin_5"
                android:visibility="gone"
                android:text="@string/string_like"/>
            <TextView
                android:id="@+id/tv_sendflower_success_siliao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_sendflower_success_like"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin_8"
                android:background="@drawable/shape_20r_orange"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:drawableLeft="@mipmap/chat_button_icon"
                android:drawablePadding="@dimen/margin_5"
                android:text="@string/string_siliao"/>
        </LinearLayout>
    </LinearLayout>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_sendflower_success_headView"
        style="@style/DefaultCircleHeadStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:background="@mipmap/ic_close_orange2"/>
</RelativeLayout>